--- a/src/app/mgmt-accounts/mgmt-accounts.component.html
+++ b/src/app/mgmt-accounts/mgmt-accounts.component.html
@@ -1,3 +1,13 @@
-<p>
-  mgmt-accounts works!
-</p>
+<ul>
+  <li *ngFor="let role of roles">
+    <b>{{role.role}}</b>
+    <br/>
+    <ul>
+      <li *ngFor="let member of role.data" routerLink="../../members/{{member.id}}">
+      {{member.username}} <i>({{member.fullname}})</i>
+      </li>
+    </ul>
+  </li>
+</ul>
+<button *ngIf="cont>=15" (click)="cont=cont-15;getMembers()">Prev</button>
+<button *ngIf="15==roles.length" (click)="cont=cont+15;getMembers()">Next</button>
