--- a/src/app/mgmt-roles-perms/mgmt-roles-perms.component.css
+++ b/src/app/mgmt-roles-perms/mgmt-roles-perms.component.css
@@ -17,3 +17,20 @@ li:focus, li:active {
   outline: none;
   background-color: #ddd;
 }
+li span {
+  color: red;
+  display: inline;
+}
+button {
+  background-color: #43ba2e;
+  color: white;
+  padding: 10px 10px;
+  margin: auto;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transition: opacity .2s;
+}
+button:hover {
+  opacity: 0.8;
+}
