--- a/src/app/mgmt-roles-perms/mgmt-roles-perms.component.html
+++ b/src/app/mgmt-roles-perms/mgmt-roles-perms.component.html
@@ -1,3 +1,10 @@
+<button routerLink="../../roles/create">Create role</button>
+<p *ngIf="msg">{{msg}}</p>
 <ul>
-  <li *ngFor="let role of roles" routerLink="../../roles/{{role.rid}}">{{role.name}}</li>
+  <li *ngFor="let role of roles; let i = index" routerLink="../../roles/{{role.rid}}">
+    {{role.name}}
+    <span
+      *ngIf="role.name.toLowerCase() != 'admin' && role.name.toLowerCase() != 'organizer' && role.name.toLowerCase() != 'subscriber'"
+      (click)="roleService.delete(role.rid).subscribe(); roles.splice(i, 1)">Ⓧ</span>
+  </li>
 </ul>
