Preparing personal items & holds pages

--- a/src/app/media-search/media-search.component.css
+++ b/src/app/media-search/media-search.component.css
@@ -8,6 +8,13 @@ ul {
   list-style: none;
   width: 40em;
 }
+.link {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.link:hover {
+  text-decoration: none;
+}
 .item-box {
   display: flex;
   justify-content: space-between;
