--- a/src/app/mgmt-accounts/mgmt-accounts.component.html
+++ b/src/app/mgmt-accounts/mgmt-accounts.component.html
@@ -1,10 +1,10 @@
 <ul>
   <label *ngFor="let role of roles">
-    <li *ngIf="role.rid != +globals.rID">
+    <li> <!-- *ngIf="role.rid != +globals.rID" -->
       <b>{{role.name}}</b>
       <br/>
       <ul>
-        <li *ngFor="let member of role.data" routerLink="../../members/{{member.id}}">
+        <li *ngFor="let member of role.data" routerLink="../../members/{{member.uid}}">
         {{member.username}} <i>({{member.fullname}})</i>
         </li>
       </ul>
