Home stretch, finally. I have everything in place. Just need to finalize & implement media info viewing (w/ holds), media editing, and user info editing -- and then write the help articles and I'm done

--- a/src/app/checkout-session/checkout-session.component.css
+++ b/src/app/checkout-session/checkout-session.component.css
@@ -39,3 +39,10 @@ li .text .barcode {
   font-size: 13px;
   color: #555;
 }
+.link {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.link:hover {
+  text-decoration: none;
+}
