--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -1,1 +1,1 @@
-<div>Account modification has been left unimplemented for the FBLA demo.</div>
+<div>Own-account modification has been left unimplemented for the FBLA demo.</div>
