--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<p>
-  dashboard works!
-</p>
+<div id="container">
+    <div id="spacer"></div>
+    <app-dash-header></app-dash-header>
+    <router-outlet></router-outlet>
+</div>
