--- a/src/app/media-search/media-search.component.html
+++ b/src/app/media-search/media-search.component.html
@@ -48,7 +48,8 @@
 <ul>
   <li *ngFor="let item of items" class="item-box result">
     <div class="text"> <!-- div in a list ahah yikes -->
-      <span class="title">{{item.title}}</span>
+      <span class="title link" routerLink="../{{item.mid}}">{{item.title}}</span>
+      <span *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}" class="link"> (edit)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
       <br/>
