--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,26 @@
+<br/>
 <p>
-  about works!
+  Code is available at <a href="https://gitlab.com/hdtrhn/fbla-webapp">my GitLab repo</a>.
+  <br/>
+  Made with ❤ by ***REMOVED*** for <i><a href="http://www.fbla-pbl.org/competitive-event/coding-programming/">Coding & Programming</a></i> as part of FBLA,
+  <br/>
+  with liberal use of these technologies (without which none of this would have been possible):
+</p>
+<ul>
+  <li><a href="https://python.org">Python 3</a></li>
+  <li><a href="https://angular.io">Angular 5</a></li>
+  <li><a href="https://www.postgresql.org/">PostgresQL</a></li>
+</ul>
+<p>Including the following Python libraries:</p>
+<ul>
+  <li><a href="https://github.com/channelcat/sanic">Sanic</a></li>
+  <li><a href="https://github.com/ahopkins/sanic-jwt">Adam Hopkins' Sanic-JWT</a></li>
+  <li><a href="https://github.com/magicstack/asyncpg">Magic Stack's AsyncPG</a></li>
+</ul>
+<p>And <a href="https://heroku.com">Heroku</a>, of course.</p>
+<p>
+  An early draft of my design spec is also viewable in the GitLab repo, right <a href="https://gitlab.com/hdtrhn/fbla-webapp/blob/master/spec/d+ds.md">here</a>.
+  <br/><i><small>(Note that it's not properly-formatted markdown; I wrote it as monospaced syntax-highlighted text, so please click the "&lt;/&gt;" button to view it as such.)</small></i>
+  <br/>
+  Some things were added after I wrote it, and some things eventually nixed on account of inviability, but it's still good as a surface-level run-through to supplement the HELP articles.
 </p>
