Put media/holds info in place

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,6 +10,7 @@
   <li><a href="https://python.org">Python 3</a></li>
   <li><a href="https://angular.io">Angular 5</a></li>
   <li><a href="https://www.postgresql.org/">PostgresQL</a></li>
+  <li><a href="https://developers.google.com/books/docs/overview">Google Books' API (for fetching book images)</a></li>
 </ul>
 <p>Including the following Python libraries:</p>
 <ul>
