--- a/src/app/media-search/media-search.component.html
+++ b/src/app/media-search/media-search.component.html
@@ -3,7 +3,7 @@
   <li *ngFor="let item of suggested" class="item-box">
     <div class="text"> <!-- div in a list ahah yikes -->
       <span class="title link" routerLink="../{{item.mid}}">{{item.title}}</span>
-      <span *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}" class="link"> (edit)</span>
+      <span class="link" *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
       <br/>
@@ -24,8 +24,8 @@
   <select placeholder="Genre" name="genre" [(ngModel)]="genre">
     <option [ngValue]="null" disabled>Genre</option>
     <option ngValue="null">Any (default)</option>
-    <option *ngFor="let gnre of globals.locGenres" [ngValue]="gnre">
-      {{gnre}}
+    <option *ngFor="let genre_ of globals.locGenres" [ngValue]="gnre">
+      {{genre_}}
     </option>
   </select>
   <select placeholder="Medium" name="media-type" [(ngModel)]="type_">
@@ -49,7 +49,7 @@
   <li *ngFor="let item of items" class="item-box result">
     <div class="text"> <!-- div in a list ahah yikes -->
       <span class="title link" routerLink="../{{item.mid}}">{{item.title}}</span>
-      <span *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}" class="link"> (edit)</span>
+      <span class="link" *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
       <br/>
@@ -62,3 +62,5 @@
       <img *ngIf="item.image && item.image != 'None'" [src]="item.image" [alt]="item.title">
   </li>
 </ul>
+<button *ngIf="cont>=20" (click)="cont=cont-20;search()">Prev</button>
+<button *ngIf="items.length==20" (click)="cont=cont+20;search()">Next</button>
