Finish media info view + edit

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,3 +25,4 @@
   <br/>
   Some things were added after I wrote it, and some things eventually nixed on account of inviability, but it's still good as a surface-level run-through to supplement the HELP articles.
 </p>
+<p>Contact at <a href="mailto:booksy.db@gmail.com" target="_blank">booksy.db@gmail.com</a></p>
