--- a/src/app/media-info/media-info.component.html
+++ b/src/app/media-info/media-info.component.html
@@ -4,8 +4,10 @@
   <button *ngIf="!item.available && !globals.isCheckoutAccount" (click)="placeOnHold()">Place hold</button>
   <h1>{{item.title}}</h1>
   <p class="author">{{item.author}}</p>
-  <img [src]="item.image"/>
+  <p>Published in {{item.published}}</p>
+  <img *ngIf="item.image && item.image != 'None'" [src]="item.image"/>
   <p>Type: {{item.type | titlecase}}</p>
+  <p>Genre: {{item.genre | titlecase }}</p>
   <p>Barcode: {{item.mid}}</p>
   <p>ISBN: {{item.isbn}}</p>
   <br/>
