--- a/src/app/mgmt-roles-perms/mgmt-roles-perms.component.html
+++ b/src/app/mgmt-roles-perms/mgmt-roles-perms.component.html
@@ -1,4 +1,4 @@
-<button routerLink="../../roles/create">Create role</button>
+<button routerLink="../../roles/new">Create role</button>
 <p *ngIf="msg">{{msg}}</p>
 <ul>
   <li *ngFor="let role of roles; let i = index" routerLink="../../roles/{{role.rid}}">
