--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,17 +12,18 @@
   <li><a href="https://www.postgresql.org/">PostgreSQL</a></li>
   <li><a href="https://developers.google.com/books/docs/overview">Google Books' API (for fetching book images)</a></li>
 </ul>
-<p>Including the following Python libraries:</p>
+<p>Including the following libraries:</p>
 <ul>
-  <li><a href="https://github.com/channelcat/sanic">Sanic</a></li>
-  <li><a href="https://github.com/ahopkins/sanic-jwt">Adam Hopkins' Sanic-JWT</a></li>
-  <li><a href="https://github.com/magicstack/asyncpg">Magic Stack's AsyncPG</a></li>
+  <li><a href="https://github.com/channelcat/sanic">Sanic</a> (Python)</li>
+  <li><a href="https://www.npmjs.com/package/ngx-md">ngx-md</a> (Angular)</li>
+  <li><a href="https://github.com/ahopkins/sanic-jwt">Adam Hopkins' Sanic-JWT</a> (Python)</li>
+  <li><a href="https://github.com/magicstack/asyncpg">MagicStack's AsyncPG</a> (Python)</li>
 </ul>
 <p>And <a href="https://heroku.com">Heroku</a> for hosting, of course.</p>
 <p>
   An early draft of my design spec is also viewable in the GitLab repo, right <a href="https://gitlab.com/hdtrhn/fbla-webapp/blob/master/spec/d+ds.md">here</a>. It includes info about how the database and backend works, among other things.
   <br/><i><small>(Note that it's not properly-formatted markdown; I wrote it as monospaced syntax-highlighted text, so please click the "&lt;/&gt;" button in the top bar to view it as such.)</small></i>
   <br/>
-  Some things were added after I wrote it, and some things eventually nixed on account of inviability, but it's still good as a surface-level run-through to supplement the HELP articles.
+  Some things were added after I wrote it, and some things eventually nixed on account of inviability, but it's still quite good as a surface-level run-through to supplement the HELP articles.
 </p>
 <p>Contact at <a href="mailto:booksy.db@gmail.com" target="_blank">booksy.db@gmail.com</a></p>
