Finish groundwork for help component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 ::ng-deep * ~ * {
   font-family: 'Roboto', sans-serif;
+  color: #232323;
 }
 ::ng-deep * ~ button, * ~ input[type=submit] {
   background-color: #43ba2e;
