--- a/src/app/help-view/help-view.component.html
+++ b/src/app/help-view/help-view.component.html
@@ -1,3 +1,6 @@
-<p>
-  help-view works!
-</p>
+<div *ngIf="article">
+  <h1>{{article.title}}</h1>
+  <markdown>
+    {{article.content}}
+  </markdown>
+</div>
