--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,3 +1,7 @@
-<markdown>
-## test
-</markdown>
+<h1>Help articles</h1>
+<hr/>
+<ul>
+  <li *ngFor="let article of articles" routerLink="./{{article.id}}">
+    {{article.title}}
+  </li>
+</ul>
