ACTUAL home stretch this time. Very close.

--- a/src/app/media-edit/media-edit.component.html
+++ b/src/app/media-edit/media-edit.component.html
@@ -2,15 +2,15 @@
 <button (click)="location.back()">Go back</button>
 <div *ngIf="item">
   <h1>{{item.title}}</h1>
+  <input type="text" name="title" [(ngModel)]="item.title" placeholder="Title"/>
   <p class="author"><input type="text" name="author" [(ngModel)]="item.author" placeholder="Author"/></p>
   <p>Published in <input type="text" name="published" [(ngModel)]="item.published" placeholder="Published"/></p>
   <img *ngIf="item.image && item.image != 'None'" [src]="item.image"/>
   <br/>
-  (image is not inputtable/editable)
+  <span *ngIf="mID!='new'">(image is not inputtable/editable)</span>
   <p>Type:
       <select name="media-type" [(ngModel)]="item.type">
         <option [ngValue]="null" disabled>Medium</option>
-        <option ngValue="null">Any (default)</option>
         <option *ngFor="let mtype of globals.locMediaTypes" [ngValue]="mtype">
           {{mtype}}
         </option>
