--- a/src/app/mgmt-media/mgmt-media.component.css
+++ b/src/app/mgmt-media/mgmt-media.component.css
@@ -12,6 +12,9 @@ ul {
   text-decoration: underline;
   cursor: pointer;
 }
+.link.bad {
+  color: red;
+}
 .link:hover {
   text-decoration: none;
 }
