--- a/src/app/mgmt-media/mgmt-media.component.html
+++ b/src/app/mgmt-media/mgmt-media.component.html
@@ -1,9 +1,10 @@
-<button routerLink="../new">Add item</button>
+<button routerLink="../edit/new">Add item</button>
 <ul>
-  <li *ngFor="let item of items" class="item-box">
+  <li *ngFor="let item of items; let i = index" class="item-box">
     <div class="text"> <!-- div in a list ahah yikes -->
       <span class="title link" routerLink="../../media/{{item.mid}}">{{item.title}}</span>
       <span class="link" *ngIf="globals.canEditMedia" routerLink="../../media/edit/{{item.mid}}"> (edit)</span>
+      <span class="link bad" *ngIf="globals.canEditMedia" (click)="del(item.mid); items.splice(i, 1)"> (delete)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
       <br/>
