--- a/src/app/media-edit/media-edit.component.html
+++ b/src/app/media-edit/media-edit.component.html
@@ -4,13 +4,12 @@
   <h1>{{item.title}}</h1>
   <input type="text" name="title" [(ngModel)]="item.title" placeholder="Title"/>
   <p class="author"><input type="text" name="author" [(ngModel)]="item.author" placeholder="Author"/></p>
-  <p>Published in <input type="text" name="published" [(ngModel)]="item.published" placeholder="Published"/></p>
+  <p>Published in <input type="number" name="published" [(ngModel)]="item.published" placeholder="Published"/></p>
   <img *ngIf="item.image && item.image != 'None'" [src]="item.image"/>
   <br/>
   <span *ngIf="mID!='new'">(image is not inputtable/editable)</span>
   <p>Type:
       <select name="media-type" [(ngModel)]="item.type">
-        <option [ngValue]="null" disabled>Medium</option>
         <option *ngFor="let mtype of globals.locMediaTypes" [ngValue]="mtype">
           {{mtype}}
         </option>
@@ -18,16 +17,16 @@
   </p>
   <p>Genre:
       <select name="genre" [(ngModel)]="item.genre">
-        <option [ngValue]="null" disabled>Genre</option>
         <option *ngFor="let genre of globals.locGenres" [ngValue]="genre">
           {{genre}}
         </option>
       </select>
+      <input type="text" [(ngModel)]="genre_" placeholder="Or a new genre?"/>
   </p>
   <p>Barcode: {{item.mid}}</p>
   <p>ISBN: <input type="text" name="isbn" [(ngModel)]="item.isbn" placeholder="ISBN"/></p>
   <br/>
-  <p>$<input type="text" name="price" [(ngModel)]="item.price" placeholder="Price"/></p>
+  <p>$<input type="number" step="0.01" min="0.01" name="price" [(ngModel)]="item.price" placeholder="Price"/></p>
   <p><input type="number" min="0" name="length" [(ngModel)]="item.length" placeholder="Length"/> pages</p>
   <button *ngIf="checkAllNecessary()" (click)="submit()">Submit</button>
 </div>
