--- a/src/app/media-edit/media-edit.component.html
+++ b/src/app/media-edit/media-edit.component.html
@@ -4,7 +4,7 @@
   <h1>{{item.title}}</h1>
   <input type="text" name="title" [(ngModel)]="item.title" placeholder="Title"/>
   <p class="author"><input type="text" name="author" [(ngModel)]="item.author" placeholder="Author"/></p>
-  <p>Published in <input type="number" name="published" [(ngModel)]="item.published" placeholder="Published"/></p>
+  <p>Published in <input type="number" name="published" [(ngModel)]="item.published" placeholder="Year"/></p>
   <img *ngIf="item.image && item.image != 'None'" [src]="item.image"/>
   <br/>
   <span *ngIf="mID!='new'">(image is not inputtable/editable)</span>
