--- a/src/app/checkout-session/checkout-session.component.html
+++ b/src/app/checkout-session/checkout-session.component.html
@@ -3,7 +3,7 @@
     <div class="text"> <!-- div in a list ahah yikes -->
       <aside class="action">{{item.available&&!globals.isCheckoutAccount?'Returned':'Borrowed'}}</aside>
       <span class="title link" routerLink="../media/{{item.mid}}">{{item.title}}</span>
-      <span *ngIf="globals.canEditMedia" routerLink="../media/edit/{{item.mid}}" class="link"> (edit)</span>
+      <span *ngIf="globals.perms.names.canManageMedia" routerLink="../media/edit/{{item.mid}}" class="link"> (edit)</span>
       <br/>
       <span class="author">{{item.author}}</span>
       <aside class="barcode">{{item.mid}}</aside>
