--- a/src/app/mgmt-accounts/mgmt-accounts.component.html
+++ b/src/app/mgmt-accounts/mgmt-accounts.component.html
@@ -1,3 +1,4 @@
+<button routerLink="../../members/new">Add member</button>
 <ul>
   <label *ngFor="let role of roles">
     <li> <!-- *ngIf="role.rid != +globals.rID" -->
