--- a/src/app/my-holds/my-holds.component.css
+++ b/src/app/my-holds/my-holds.component.css
@@ -9,6 +9,9 @@ ul {
   text-decoration: underline;
   cursor: pointer;
 }
+.link.bad {
+  color: red;
+}
 .link:hover {
   text-decoration: none;
 }
