--- a/src/app/my-holds/my-holds.component.html
+++ b/src/app/my-holds/my-holds.component.html
@@ -1,9 +1,10 @@
 <p>{{msg}}</p>
 <ul>
-  <li *ngFor="let item of items" class="item-box result">
+  <li *ngFor="let item of items; let i = index" class="item-box result">
     <div class="text"> <!-- div in a list ahah yikes -->
       <span class="title link" routerLink="../../media/{{item.mid}}">{{item.title}}</span>
       <span class="link" *ngIf="globals.canEditMedia" routerLink="../../media/edit/{{item.mid}}"> (edit)</span>
+      <span class="link bad" (click)="clearHold(item.mid); items.splice(i, 1)">(clear hold)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
       <br/>
