--- a/src/app/media-search/media-search.component.html
+++ b/src/app/media-search/media-search.component.html
@@ -49,7 +49,7 @@
   <li *ngFor="let item of items" class="item-box result">
     <div class="text"> <!-- div in a list ahah yikes -->
       <span class="title link" routerLink="../{{item.mid}}">{{item.title}}</span>
-      <span class="link" *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
+      <span class="link" *ngIf="globals.perms.names.canManageMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
       <br/>
       <span class="author">{{item.author | titlecase}}</span>
       <br/>
